--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: node_js
 node_js:
   - 9
   - 8
-after_script: 'cat ./coverage/lcov.info | node ./node_modules/coveralls/bin/coveralls.js'
+install:
+  - npm install -g codecov
+after_script: 'codecov'
