--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^22.1.2",
     "@types/node": "^9.4.6",
+    "codecov": "^3.0.0",
     "coveralls": "^2.13.1",
     "husky": "^0.14.3",
     "jest": "^22.4.0",
