--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,4 @@ language: node_js
 node_js:
   - 9
   - 8
-install:
-  - npm install -g codecov
-after_script: 'codecov'
+after_script: 'npm install -g codecov && codecov'
