Break out publish specific ts config into new file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,7 @@
 {
+  "extends": "./tsconfig.publish.json",
   "compilerOptions": {
-    "target": "es2015",
-    "module": "commonjs",
-    "strictNullChecks": true,
-    "noImplicitAny": true,
-    "outDir": "dist",
-    "allowJs": false,
     "sourceMap": true,
     "watch": true,
-    "experimentalDecorators": true,
-    "declaration": true,
-    "forceConsistentCasingInFileNames": true,
-  },
-  "include": [
-    "lib/**/*.ts"
-  ],
-  "exclude": [
-    "lib/**/*.test.ts",
-    "dist",
-    "node_modules",
-  ]
+  }
 }
