Remove trailing comma

--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -8,7 +8,7 @@
     "allowJs": false,
     "experimentalDecorators": true,
     "declaration": true,
-    "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "lib/**/*.ts"
